[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/XYPlot/PlotPanel.gd" type="Script" id=1]
[ext_resource path="res://ui/XYPlot/XYPlot.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/XYPlot/PlotPanelNub.gd" type="Script" id=4]

[node name="XYPlot" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 60.0
margin_bottom = 66.0
rect_min_size = Vector2( 60, 66 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
normalize_display = true
panel_type = 0
always_max = false
min_length = 0.0
limit_angle = false
default_value = Vector2( 0, 0 )
snap = true
snap_angles = 8
snap_align_to_limit_center = true
snap_radius = 0.0

[node name="PlotPanel" type="Control" parent="."]
unique_name_in_owner = true
margin_top = 8.0
margin_right = 50.0
margin_bottom = 58.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="PlotPanelNub" type="Control" parent="."]
unique_name_in_owner = true
margin_top = 8.0
margin_right = 50.0
margin_bottom = 58.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 11.0
grow_horizontal = 2
mouse_filter = 1
size_flags_vertical = 0
text = "XYPlot"
align = 1
valign = 1

[node name="XLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 50.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 58.0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "0"
align = 1
valign = 1

[node name="YLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 55.0
margin_right = 50.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"
align = 1
valign = 1

[node name="UpdateTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true
